--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -2,3 +2,41 @@
 <app-sidebar></app-sidebar>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+
+<!-- Button login modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
+    Login
+</button>
+<!-- Login Modal -->
+<app-login-modal></app-login-modal>
+
+
+<!-- Button recuperar contraseña 1 modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#recuperarContrasenia1">
+    Recuperar contraseña 1
+</button>
+<!-- Recuperar contraseña 1 modal -->
+<app-recuperar-contrasenia-a></app-recuperar-contrasenia-a>
+
+
+<!-- Button recuperar contraseña 2 modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#recuperarContrasenia2">
+    Recuperar contraseña 2
+</button>
+<!-- Recuperar contraseña 2 modal -->
+<app-recuperar-contrasenia-b></app-recuperar-contrasenia-b>
+
+
+<!-- Button cerrar sesion modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cerrarSesionModal">
+    Cerrar sesion modal
+</button>
+<!-- Cerrar sesion modal -->
+<app-cerrar-sesion-modal></app-cerrar-sesion-modal>
+
+<!-- Button carrito preview sidebar -->
+<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas-carritoPreview" aria-controls="offcanvas-carritoPreview">
+    Carrito Preview
+</button>
+<!-- Carrito preview sidebar -->
+<app-carrito-preview></app-carrito-preview>
