--- a/src/app/pages/carrito/carrito.component.html
+++ b/src/app/pages/carrito/carrito.component.html
@@ -7,19 +7,20 @@
         <div class="linea-verde"></div>
         <div class="producto d-flex">
             <img class="img-producto img-fluid" src="assets/img/carrito/01.jpg" alt="">
+            <!-- <div class="img-producto" style="background-image: url('assets/img/carrito/01.jpg');"></div> -->
             <div class="contenedor-producto d-flex flex-column justify-content-between">
-                <div class="d-flex justify-content-between">
-                    <div>
+                <div class="contenedor-1 d-flex justify-content-between align-items-start">
+                    <div class="div-nombre">
                         <p class="nombre-producto">Cúrcuma en polvo</p>
                         <p class="codigo-producto">Código: CU04587</p>
                     </div>
-                    <div class="d-flex align-items-center">
+                    <div class="div-cantidad d-flex align-items-center">
                         <button class="btn-accion"><i class="bi bi-dash-lg"></i></button>
                         <span class="cantidad-producto">01</span>
                         <button class="btn-accion"><i class="bi bi-plus-lg"></i></button>
                     </div>
                 </div>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="contenedor-2 d-flex justify-content-between align-items-center">
                     <p class="precio-producto">S/20.00 <span>(01 ud.)</span></p>
                     <button class="btn-eliminar">Eliminar Producto</button>
                 </div>
@@ -27,19 +28,20 @@
         </div>
         <div class="producto d-flex">
             <img class="img-producto img-fluid" src="assets/img/carrito/02.jpg" alt="">
+            <!-- <div class="img-producto" style="background-image: url('assets/img/carrito/02.jpg');"></div> -->
             <div class="contenedor-producto d-flex flex-column justify-content-between">
-                <div class="d-flex justify-content-between">
-                    <div>
+                <div class="contenedor-1 d-flex justify-content-between align-items-start">
+                    <div class="div-nombre">
                         <p class="nombre-producto">Jengibre en polvo</p>
                         <p class="codigo-producto">Código: JE05619</p>
                     </div>
-                    <div class="d-flex align-items-center">
+                    <div class="div-cantidad d-flex align-items-center">
                         <button class="btn-accion"><i class="bi bi-dash-lg"></i></button>
                         <span class="cantidad-producto">02</span>
                         <button class="btn-accion"><i class="bi bi-plus-lg"></i></button>
                     </div>
                 </div>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="contenedor-2 d-flex justify-content-between align-items-center">
                     <p class="precio-producto">S/37.80 <span>(02 uds.)</span></p>
                     <button class="btn-eliminar">Eliminar Producto</button>
                 </div>
@@ -47,19 +49,20 @@
         </div>
         <div class="producto cancelado d-flex">
             <img class="img-producto img-fluid" src="assets/img/carrito/03.jpg" alt="">
+            <!-- <div class="img-producto" style="background-image: url('assets/img/carrito/03.jpg');"></div> -->
             <div class="contenedor-producto d-flex flex-column justify-content-between">
-                <div class="subcontenedor-producto d-flex justify-content-between">
-                    <div>
+                <div class="subcontenedor-producto contenedor-1 d-flex justify-content-between align-items-start">
+                    <div class="div-nombre">
                         <p class="nombre-producto">Palta en cubos congelados</p>
                         <p class="codigo-producto">Código: PC03295</p>
                     </div>
-                    <div class="d-flex align-items-center">
+                    <div class="div-cantidad d-flex align-items-center">
                         <button class="btn-accion"><i class="bi bi-dash-lg"></i></button>
                         <span class="cantidad-producto">01</span>
                         <button class="btn-accion"><i class="bi bi-plus-lg"></i></button>
                     </div>
                 </div>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="contenedor-2 d-flex justify-content-between align-items-center">
                     <p class="precio-producto">S/37.80 <span>(01 ud.)</span></p>
                     <button class="btn-recuperar">Recuperar Producto</button>
                 </div>
