--- a/src/app/pages/pedidos-detalle/pedidos-detalle.component.html
+++ b/src/app/pages/pedidos-detalle/pedidos-detalle.component.html
@@ -88,7 +88,7 @@
                         <p>Correo Electrónico</p>
                         <p>:</p>
                     </div>
-                    <p class="cuadro-texto-info color-gris">miguel.ramirez@gmail.com</p>
+                    <p class="cuadro-texto-info color-gris" style="overflow-wrap: break-word;">miguel.ramirez@gmail.com</p>
                 </div>
                 <div class="texto-item-flex d-flex">
                     <div class="div-cuadro-texto-item d-flex justify-content-between nowrap">
@@ -123,9 +123,9 @@
                                 <tr>
                                     <th scope="col">Producto</th>
                                     <th scope="col">Código</th>
-                                    <th scope="col">Precio Unitario</th>
+                                    <th scope="col" style="min-width: 142px;">Precio Unitario</th>
                                     <th scope="col">Cantidad</th>
-                                    <th scope="col">Total</th>
+                                    <th scope="col" style="min-width: 82px;">Total</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -165,7 +165,8 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex justify-content-end">
+
+        <div class="contenedor-boton d-flex justify-content-end">
             <button class="btn btn-regresar">REGRESAR</button>
         </div>
     </div>
