--- a/src/app/pages/perfil-usuario/perfil-usuario.component.html
+++ b/src/app/pages/perfil-usuario/perfil-usuario.component.html
@@ -25,19 +25,19 @@
         <h2 class="contenido-titulo">Información Personal</h2>
         <div class="linea-verde"></div>
         <div class="row g-5 mb-5">
-            <div class="col-md-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Nombre</label>
                     <input type="text" class="form-control input-custom" value="Miguel Angel">
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Apellidos</label>
                     <input type="text" class="form-control input-custom" value="Ramirez Gutierrez">
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Tipo de Documento</label>
                     <div class="custom-div">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Celular</label>
                     <div class="d-flex contenedor-inputs-celular">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Correo Electrónico</label>
                     <input type="text" class="form-control input-custom" value="miguel.ramirez@gmail.com">
@@ -64,13 +64,13 @@
         <h2 class="contenido-titulo">Cambiar contraseña</h2>
         <div class="linea-verde"></div>
         <div class="row g-5 mb-5">
-            <div class="col-md-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Contraseña actual</label>
                     <input type="password" class="form-control input-custom" placeholder="Ingresa tu contraseña actual">
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Nueva contraseña</label>
                     <input type="password" class="form-control input-custom" placeholder="Ingresa tu nueva contraseña">
@@ -80,13 +80,13 @@
         <h2 class="contenido-titulo">Empresa</h2>
         <div class="linea-verde"></div>
         <div class="row g-5 mb-5">
-            <div class="col-md-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Razón Social</label>
                     <input type="text" class="form-control input-custom" value="D&G Importación SAC">
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">RUC</label>
                     <input type="text" class="form-control input-custom" value="10987654321">
@@ -97,7 +97,7 @@
         <div class="linea-verde"></div>
         <div class="rectangulo-verde-tipo-1">Dirección 01</div>
         <div class="row g-5 mb-5">
-            <div class="col-md-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Departamento</label>
                     <select class="form-select select-custom" aria-label="departamento">
@@ -105,7 +105,7 @@
                     </select>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Provincia</label>
                     <select class="form-select select-custom" aria-label="departamento">
@@ -113,7 +113,7 @@
                     </select>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Distrito</label>
                     <select class="form-select select-custom" aria-label="departamento">
@@ -121,13 +121,13 @@
                     </select>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Dirección</label>
                     <input type="text" class="form-control input-custom" value="Calle Caminos del Inca 1920">
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Referencia</label>
                     <input type="text" class="form-control input-custom" value="Edificio color verde.">
