--- a/src/app/pages/proceso-compra-a/proceso-compra-a.component.html
+++ b/src/app/pages/proceso-compra-a/proceso-compra-a.component.html
@@ -2,8 +2,9 @@
     <div class="contenido d-flex flex-column">
         <h2 class="contenido-titulo">Información de Envío</h2>
         <div class="linea-verde"></div>
+        
         <div class="row g-5 mb-5">
-            <div class="col-md-4">
+            <div class="col-12 col-sm-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Departamento</label>
                     <select class="form-select select-custom" aria-label="departamento">
@@ -11,7 +12,7 @@
                     </select>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-12 col-sm-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Provincia</label>
                     <select class="form-select select-custom" aria-label="departamento">
@@ -19,7 +20,7 @@
                     </select>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-12 col-sm-6 col-xl-4">
                 <div class="mb-1">
                     <label class="form-label label-custom">Distrito</label>
                     <select class="form-select select-custom" aria-label="departamento">
@@ -28,14 +29,14 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-6">
+        <div class="row g-5">
+            <div class="col-12 col-sm-6">
                 <div class="mb-1">
                     <label class="form-label label-custom">Dirección</label>
                     <input type="text" class="form-control input-custom" placeholder="Ingresa tu dirección">
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-12 col-sm-6">
                 <div class="mb-1">
                     <label class="form-label label-custom">Referencia</label>
                     <input type="text" class="form-control input-custom" placeholder="Ingresa la referencia de tu domicilio">
@@ -43,7 +44,8 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex justify-content-end">
+        
+        <div class="contenedor-boton d-flex justify-content-end">
             <button type="button" class="btn-crearDireccion" disabled>CREAR DIRECCIÓN</button>
         </div>
     </div>
