--- a/src/app/pages/proceso-compra-b/proceso-compra-b.component.html
+++ b/src/app/pages/proceso-compra-b/proceso-compra-b.component.html
@@ -2,10 +2,11 @@
     <div class="contenido d-flex flex-column">
         <h2 class="contenido-titulo">Confirmación de datos</h2>
         <div class="linea-verde"></div>
+        
         <div class="cuadro-verde d-flex flex-column">
             <h3 class="titulo-cuadro">Dirección de envío</h3>
-            <div class="d-flex justify-content-between align-items-end">
-                <div>
+            <div class="contenedor-datos d-flex justify-content-between align-items-end">
+                <div class="datos-div">
                     <p class="texto-cuadro">Calle Caminos del Inca 1920</p>
                     <p class="texto-cuadro">San Miguel - Lima - Lima</p>
                     <p class="texto-referencia">Referencia: Edificio color verde.</p>
@@ -16,17 +17,20 @@
         <div class="cuadro-verde">
             <h3 class="titulo-cuadro">Dirección de envío</h3>
             <div class="row">
-                <div class="col-5">
+                <div class="col-12 col-sm-6 col-lg-6 col-xl-5">
                     <p class="texto-cuadro">Miguel Angel Ramirez Gutierrez</p>
                     <p class="texto-cuadro">+51 987 654 321</p>
-                    <p class="texto-cuadro" style="word-wrap: break-word">miguel.ramirez@gmail.com</p>
+                    <div style="overflow-wrap: break-word; min-width: 0;">
+                        <p class="texto-cuadro">miguel.ramirez@gmail.com</p>
+                    </div>
                 </div>
-                <div class="col-5">
+                <div class="col-12 col-sm-6 col-lg-6 col-xl-5">
                     <p class="texto-cuadro">RUC: 10987654321</p>
                     <p class="texto-cuadro">Razón Social: D&G Importación SAC</p>
                 </div>
             </div>
         </div>
+        
         <div class="cuadro-azul">
             <p>*Tu pedido llegará entre 10 a 15 días hábiles. Si necesitas ayuda puedes comunicarte con nosotros directamente al +511 450 6380 o escríbenos al whatsapp +51 987 654 321.</p>
         </div>
