--- a/src/app/pages/proceso-compra-c/proceso-compra-c.component.html
+++ b/src/app/pages/proceso-compra-c/proceso-compra-c.component.html
@@ -9,10 +9,16 @@
                     Tarjeta de Crédito o Débito (Mastercard, Visa y Diners Club)
                 </label>
             </div>
-            <div class="d-flex align-items-center gap-2">
-                <img src="assets/img/proceso-compra/mastercard.png" alt="">
-                <img src="assets/img/proceso-compra/visa.png" alt="">
-                <img src="assets/img/proceso-compra/diners.png" alt="">
+            <div class="div-img-tarjetas d-flex align-items-center gap-2">
+                <div class="d-flex">
+                    <img class="img-fluid" width="40" src="assets/img/proceso-compra/mastercard.png" alt="">
+                </div>
+                <div class="d-flex">
+                    <img class="img-fluid" width="61" src="assets/img/proceso-compra/visa.png" alt="">
+                </div>
+                <div class="d-flex">
+                    <img class="img-fluid" width="86" src="assets/img/proceso-compra/diners.png" alt="">
+                </div>
             </div>
         </div>
         <div class="div-metodo d-flex justify-content-between">
@@ -22,15 +28,21 @@
                   Pago por Banca móvil o banca por internet
                 </label>
             </div>
-            <div class="d-flex align-items-center gap-2">
-                <img src="assets/img/proceso-compra/interbank.png" alt="">
-                <img src="assets/img/proceso-compra/bbva.png" alt="">
-                <img src="assets/img/proceso-compra/bcp.png" alt="">
+            <div class="div-img-tarjetas d-flex align-items-center gap-2">
+                <div class="d-flex">
+                    <img class="img-fluid" width="156" src="assets/img/proceso-compra/interbank.png" alt="">
+                </div>
+                <div class="d-flex">
+                    <img class="img-fluid" width="90" src="assets/img/proceso-compra/bbva.png" alt="">
+                </div>
+                <div class="d-flex">
+                    <img class="img-fluid" width="104" src="assets/img/proceso-compra/bcp.png" alt="">
+                </div>
             </div>
         </div>
         <h3 class="subtitulo">Seleccionar comprobante de pago</h3>
-        <div class="d-flex gap-5">
-            <div class="div-comprobante">
+        <div class="div-tipos-comprobantes d-flex flex-wrap">
+            <div class="div-comprobante" style="margin-right: 30px;">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="comprobante" id="flexRadioDefault3" checked>
                     <label class="form-check-label" for="flexRadioDefault3">
