--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -5,19 +5,19 @@
         <div>
             <p>Ingresa tus datos personales...</p>
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <div class="mb-5">
                         <label for="iptNombre" class="form-label">Nombre</label>
                         <input type="text" class="form-control" id="iptNombre" placeholder="Ingresa tu nombre">
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <div class="mb-5">
                         <label for="iptApellidos" class="form-label">Apellidos</label>
                         <input type="text" class="form-control" id="iptApellidos" placeholder="Ingresa tus apellidos">
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <div class="mb-5">
                         <label class="form-label">Tipo y N° de Documento</label>
                         <div class="d-flex">
@@ -28,25 +28,25 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <div class="mb-5">
                         <label for="iptCargo" class="form-label">Cargo</label>
                         <input type="text" class="form-control" id="iptCargo" placeholder="Ingresa el cargo que ejerces en tu empresa">
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <div class="mb-5">
                         <label for="iptRazonSocial" class="form-label">Razon Social</label>
                         <input type="text" class="form-control" id="iptRazonSocial" placeholder="Ingresa la razón social de tu empresa">
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <div class="mb-5">
                         <label for="iptRuc" class="form-label">RUC</label>
                         <input type="text" class="form-control" id="iptRuc" placeholder="Ingresa el RUC de tu empresa">
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <div class="mb-5">
                         <label for="iptRuc" class="form-label">Celular</label>
                         <div class="d-flex">
@@ -55,20 +55,20 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <div class="mb-5">
                         <label for="iptCorreo" class="form-label">Correo Electrónico</label>
                         <input type="email" class="form-control" id="iptCorreo" placeholder="Ingresa tu correo electrónico">
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <div class="mb-5">
                         <label for="iptPassword" class="form-label">Contraseña</label>
                         <input type="password" class="form-control" id="iptPassword" placeholder="Ingresa una contraseña">
                         <p class="msg-contrasena">*Tu contraseña debe tener mínimo 6 caracteres, sin espacios y caracteres especiales.</p>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <div class="mb-5">
                         <label for="iptConfirmPassword" class="form-label">Confirmar contraseña</label>
                         <input type="password" class="form-control" id="iptConfirmPassword" placeholder="Ingresa nuevamente la contraseña">
