--- a/src/app/pages/perfil-usuario/perfil-usuario.component.scss
+++ b/src/app/pages/perfil-usuario/perfil-usuario.component.scss
@@ -4,6 +4,12 @@
     padding-right: 140px;
 }
 
+input{
+    text-overflow: ellipsis;
+}
+select{
+    text-overflow: ellipsis;
+}
 .label-custom{
     color: #11434c;
     font-size: 1.6rem;
@@ -118,4 +124,176 @@
     font-weight: 500;
     padding: 25px 90px 20px;
     border-radius: 10px;
+}
+
+
+/* Perfil Menu */
+.perfilMenu{
+    flex: 0 0 395px;
+    // width: 395px;
+    overflow: hidden;
+    border-radius: 20px;
+}
+.perfilMenu-1{
+    background-color: #d1efe5;
+    padding: 30px 40px;
+}
+.img-perfilMenu-1{
+    margin-right: 20px
+}
+.text-1-perfilMenu-1{
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+    font-weight: 400;
+    margin-bottom: 0;
+    color: #11434c;
+}
+.text-2-perfilMenu-1{
+    margin-bottom: 0;
+    color: #11434c;
+    font-size: 2.1rem;
+    line-height: 2.1rem;
+    font-weight: 700;
+}
+.perfilMenu-2-enlace{
+    background-color: #e5f6f0;
+    padding: 20px 40px 25px;
+    text-decoration: none;
+    display: block;
+}
+.perfilMenu-2-enlace > span{
+    color: #11434c;
+    font-size: 1.6rem;
+    font-weight: 500;
+    position: relative;
+    top: 5px
+}
+.perfilMenu-2-enlace > img{
+    margin-right: 15px;
+}
+.perfilMenu-2-enlace:hover{
+    background-color: #c0e8dd;
+}
+.perfilMenu-2-enlace-activo{
+    background-color: #c0e8dd;
+}
+.perfilMenu-2-enlace-activo::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 8px;
+    background-color: #11434c;
+}
+
+
+@media (max-width: 1600px) {
+    .content-perfil-usuario{
+        padding-left: 100px;
+        padding-right: 100px;
+    }
+}
+
+@media (max-width: 1440px) {
+    .content-perfil-usuario{
+        padding-left: 70px;
+        padding-right: 70px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .content-perfil-usuario{
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    .contenido-titulo{
+        font-size: 3rem;
+    }
+}
+
+@media (max-width: 992px) {
+    .content-perfil-usuario{
+        padding-left: 30px;
+        padding-right: 30px;
+        flex-direction: column;
+    }
+    .perfilMenu{
+        flex: 0 1 auto;
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    .contenido{
+        padding-left: 0;
+    }
+    .contenido-titulo{
+        font-size: 2.8rem;
+    }
+}
+@media (max-width: 576px) {
+    .perfilMenu-1{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+@media (max-width: 425px) {
+    .content-perfil-usuario{
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+    .row{
+        --bs-gutter-x: 0;
+    }
+    .contenido-titulo{
+        font-size: 2.4rem;
+        text-align: center;
+    }
+    .label-custom{
+        font-size: 1.3rem;
+    }
+    .input-custom{
+        font-size: 1.1rem;
+    }
+    .rectangulo-verde-tipo-1{
+        font-size: 1.5rem;
+    }
+    .rectangulo-verde-tipo-2 > p{
+        font-size: 1.5rem;
+    }
+    .btn-guardar-cambios{
+        width: 100%;
+        padding-left: 20px;
+        padding-right: 20px;
+        font-size: 1.2rem;
+    }
+    .perfilMenu-1{
+        flex-direction: column;
+    }
+    .img-perfilMenu-1{
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+    .text-1-perfilMenu-1{
+        font-size: 1.3rem;
+        text-align: center;
+    }
+    .text-2-perfilMenu-1{
+        font-size: 1.7rem;
+        text-align: center;
+    }
+    .perfilMenu-2-enlace{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .perfilMenu-2-enlace > span{
+        font-size: 1.3rem;
+    }
+}
+
+@media (max-width: 375px) {
+    .contenido-titulo{
+        font-size: 2.2rem;
+    }
 }
