--- a/src/app/pages/preguntas-frecuentes/preguntas-frecuentes.component.scss
+++ b/src/app/pages/preguntas-frecuentes/preguntas-frecuentes.component.scss
@@ -42,3 +42,50 @@
     color: #2bb289;
     font-weight: 600;
 }
+
+@media (max-width: 1600px) {
+    .content-preguntas-frecuentes{
+        padding-left: 100px;
+        padding-right: 100px;
+    }
+}
+@media (max-width: 1440px) {
+    .content-preguntas-frecuentes{
+        padding-left: 70px;
+        padding-right: 70px;
+    }
+    .contenedor > h1{
+        font-size: 3rem;
+    }
+}
+@media (max-width: 1200px) {
+    .content-preguntas-frecuentes{
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    .contenedor > h1{
+        font-size: 2.5rem;
+    }
+}
+@media (max-width: 992px) {
+    .content-preguntas-frecuentes{
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
+@media (max-width: 768px) {}
+@media (max-width: 576px) {}
+@media (max-width: 425px) {
+    .content-preguntas-frecuentes{
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+    .contenedor > h1{
+        font-size: 2.4rem;
+    }
+    .contenedor p{
+        font-size: 1.1rem;
+        line-height: normal;
+    }
+}
+@media (max-width: 375px) {}
