--- a/src/app/pages/recuperar-contrasenia-d/recuperar-contrasenia-d.component.scss
+++ b/src/app/pages/recuperar-contrasenia-d/recuperar-contrasenia-d.component.scss
@@ -1,5 +1,7 @@
 .div-container{
     padding-top: 100px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 .contenedor{
     max-width: 360px;
@@ -68,4 +70,27 @@
     color: #11434c;
     text-decoration: none;
     font-weight: 500;
+}
+
+@media (max-width: 425px) {
+    .div-container{
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+    .titulo{
+        font-size: 1.8rem;
+        line-height: normal;
+    }
+    .texto{
+        font-size: 1.1rem;
+    }
+    .form-control{
+        font-size: 1.1rem;
+    }
+    .btn-enviar{
+        font-size: 1.2rem;
+    }
+    .aviso-registro{
+        font-size: 1.1rem;
+    }
 }
